# CodeCriticAI

./: README.md  package-lock.json  package.json
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/app/: __init__.py  config.py  run_app.py
backend/app/auth/: routes.py
backend/app/models/: review.py  user.py
backend/app/review/: routes.py
backend/app/services/: ai_review_service.py  code_review_service.py  task_manager_service.py
backend/app/tests/: conftest.py
backend/app/tests/auth/: test_routes.py
backend/app/tests/models/: test_models.py
backend/app/tests/review/: test_review.py
backend/app/tests/services/: test_ai_service.py
backend/app/utils/: ai_agent_utils.py  file_utils.py  request_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 127422268e2e_added_review_history_and_review_table_.py  9e1b1adfe339_initial_migration.py  bbef224a537d_filreview_added_with_new_column_review.py  ed2377d92af6_added_code_language_column_for_.py
frontend/: README.md  electron-builder.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/electron/: authStore.ts  main.ts  preload.ts  tsconfig.json  utlis.ts
frontend/src/: App.css  App.tsx  electron.d.ts  index.css
frontend/src/components/BottomPanel/: BottomPanel.css  BottomPanel.tsx
frontend/src/components/ErrorBoundary/: ErrorBoundary.tsx
frontend/src/components/FilePathInput/: FilePathInput.css  FilePathInput.tsx
frontend/src/components/Navbar/: Navbar.css  Navbar.tsx
frontend/src/components/ReviewContent/: ReviewContent.css  ReviewContent.tsx
frontend/src/components/ReviewProgress/: ReviewProgress.css  (+1 more)
frontend/src/services/: authService.ts  axiosInstanceService.ts  reviewService.ts
frontend/src/types/: electron.d.ts  index.ts
(+10 files in other folders)
